--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Title of the document</title>
+<link ref="stylesheet" href="styles.css">
+</head>
+<body>    
 <div class="cursor"></div>
     <canvas id="matrix-canvas"></canvas>
     
@@ -116,3 +123,4 @@
         <div class="footer-bottom">
             <p>© 2025 SEMTEX TECHNOLOGIES :: ALL NEURAL NETWORKS RESERVED :: CLASSIFIED LEVEL OMEGA</p>
         </div>
+</body>
