--- a/index.html
+++ b/index.html
@@ -124,3 +124,5 @@
             <p>© 2025 SEMTEX TECHNOLOGIES :: ALL NEURAL NETWORKS RESERVED :: CLASSIFIED LEVEL OMEGA</p>
         </div>
 </body>
+  <script src="script.js"></script>
+</html>
