--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Title of the document</title>
-<link ref="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>SEMTEX technologies</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>    
+<body>   
 <div class="cursor"></div>
     <canvas id="matrix-canvas"></canvas>
     
@@ -123,6 +124,6 @@
         <div class="footer-bottom">
             <p>© 2025 SEMTEX TECHNOLOGIES :: ALL NEURAL NETWORKS RESERVED :: CLASSIFIED LEVEL OMEGA</p>
         </div>
+ <script src="script.js"></script>
 </body>
-  <script src="script.js"></script>
 </html>
