--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1 class="hero-title">SEMTEX</h1>
+<!--             <h1 class="hero-title">SEMTEX</h1> -->
             <p class="hero-subtitle">NEURAL AUTOMATION SYSTEMS</p>
             <div class="terminal-text">
                 <span id="typed-text"></span><span class="terminal-cursor"></span>
