--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav-links">
                 <li><a href="#home">INIT</a></li>
                 <li><a href="#services">MODULES</a></li>
-                <li><a href="#about">INTEL</a></li>
+                <li><a href="about.html">INTEL</a></li>
                 <li><a href="#stats">METRICS</a></li>
                 <li><a href="#contact">CONNECT</a></li>
             </ul>
@@ -44,12 +44,12 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-<!--             <h1 class="hero-title">SEMTEX</h1> -->
+            <h1 class="hero-title">SEMTEX</h1>
             <p class="hero-subtitle">NEURAL AUTOMATION SYSTEMS</p>
             <div class="terminal-text">
                 <span id="typed-text"></span><span class="terminal-cursor"></span>
             </div>
-            <a href="#contact" class="cta-button">INITIALIZE PROTOCOL</a>
+            <a href="services.html" class="cta-button">INITIALIZE PROTOCOL</a>
         </div>
     </section>
 
